--- a/index/index.html
+++ b/index/index.html
@@ -61,8 +61,8 @@
                   <img src="../img/villa_4.jpg" class="card-img-top img-fluid" alt="...">
                   <div class="card-body">
                     <h5 class="card-title" style="color: #40382A;">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn custom-button">Vai all'annuncio</a>
+                    <p class="card-text">Breve descrizione dell'annuncio.</p>
+                    <a href="./annunci.html" class="btn custom-button">Vai agli annunci</a>
                   </div>
                 </div>
               </div>
@@ -73,8 +73,8 @@
                   <img src="../img/villa_5.jpg" class="card-img-top img-fluid img-cover" alt="...">
                   <div class="card-body">
                     <h5 class="card-title" style="color: #40382A;">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn custom-button">Vai all'annuncio</a>
+                    <p class="card-text">Breve descrizione dell'annuncio.</p>
+                    <a href="./annunci.html" class="btn custom-button">Vai agli annunci</a>
                   </div>
                 </div>
               </div>
@@ -85,8 +85,8 @@
                   <img src="../img/villa_6.jpg" class="card-img-top img-fluid" alt="...">
                   <div class="card-body">
                     <h5 class="card-title" style="color: #40382A;">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn custom-button">Vai all'annuncio</a>
+                    <p class="card-text">Breve descrizione dell'annuncio.</p>
+                    <a href="./annunci.html" class="btn custom-button">Vai agli annunci</a>
                   </div>
                 </div>
               </div>
